// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: TextButton ui standard 1`] = `
<u
  className="align-self-center clickable font-weight-lighter "
  onClick={[MockFunction]}
  role="button"
>
  Clear
</u>
`;

exports[`component: TextButton ui with custom classname 1`] = `
<u
  className="align-self-center clickable font-weight-lighter yolo"
  onClick={[MockFunction]}
  role="button"
>
  Clear
</u>
`;
